tests/ui/traits/alias/not-a-marker.stderr
error: the `marker` attribute cannot be used on trait aliases
  --> $DIR/not-a-marker.rs:3:3
   |
LL | #[marker]
   |   ^^^^^^
   |
   = help: the `marker` attribute can only be applied to traits

error: aborting due to 1 previous error

